--- a/Kartverket.Geonorge.Download/packages.config
+++ b/Kartverket.Geonorge.Download/packages.config
@@ -3,15 +3,15 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="Arkitektum.GIS.Lib.MetadataCSW" version="1.9.100" targetFramework="net472" />
   <package id="Arkitektum.GIS.Lib.SerializeUtil" version="1.3.1" targetFramework="net472" />
-  <package id="Autofac" version="4.9.2" targetFramework="net472" />
+  <package id="Autofac" version="4.9.4" targetFramework="net472" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net472" />
   <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Autofac.Owin" version="4.2.0" targetFramework="net472" />
-  <package id="Autofac.WebApi2" version="4.2.1" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
-  <package id="Geonorge.AuthLib.Common" version="1.0.40" targetFramework="net472" />
-  <package id="Geonorge.AuthLib.NetFull" version="1.0.40" targetFramework="net472" />
-  <package id="GeoNorgeAPI" version="3.1.0" targetFramework="net472" />
+  <package id="Autofac.WebApi2" version="4.3.1" targetFramework="net472" />
+  <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
+  <package id="Geonorge.AuthLib.Common" version="1.0.44" targetFramework="net472" />
+  <package id="Geonorge.AuthLib.NetFull" version="1.0.44" targetFramework="net472" />
+  <package id="GeoNorgeAPI" version="3.1.3" targetFramework="net472" />
   <package id="Kartverket.Geonorge.Utilities" version="1.0.45" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="MB.Owin.Logging.Log4Net" version="1.0.2" targetFramework="net472" />
@@ -27,24 +27,25 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Versioning" version="3.0.1" targetFramework="net472" />
-  <package id="Microsoft.AspNet.WebApi.Versioning.ApiExplorer" version="3.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Versioning" version="3.0.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Versioning.ApiExplorer" version="3.1.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Http" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.4.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.4.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.4.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Http" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net472" />
@@ -59,15 +60,15 @@
   <package id="ScottBrady91.AspNet.Identity.ConfigurablePasswordHasher" version="1.0.0" targetFramework="net452" />
   <package id="Strathweb.CacheOutput.WebApi2" version="0.11.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net472" />
-  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.6.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
-  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
-  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net472" />
   <package id="WebApi.BasicAuth" version="0.3.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
